tests/fails/f18.t
require("fail")

terra foo()
    return nil + 1 
end
foo()
